# BacppkEnd

./: .gitignore  ConstraintLayoutGenerator.sln  ConstraintLayoutGenerator.vcxproj  ConstraintLayoutGenerator.vcxproj.filters  ErrorPage.hpp  Html.hpp  Http.hpp  HttpServer.cpp  HttpServer.hpp  Https.hpp  IndexPage.hpp  InetSocketWrapper.cpp  StringHelper.hpp  UploadApi.cpp  UploadApi.hpp  UploadPage.hpp  inet-socket-wrapper.cpp  inet-socket-wrapper.h
WASMDOM/: WObject.h  WPage.hpp
frontend/: Directory.build.props  Frontend.vcxproj  assert.h  example.c  string.h  vector
frontend/Frontend/: Frontend.vcxproj  Frontend.vcxproj.filters  assert.c  cstdlib  example.c  memory.c  stdexcept  stdio.h  stdlib.h  string  string.c  wasm.h  xprintf.c
html/: loadwasm.js
server/: CMakeLists.txt  Connection.cpp  Connection.hpp  ErrorPage.cpp  ErrorPage.hpp  FileResponder.cpp  FileResponder.hpp  Html.hpp  Http.cpp  Http.hpp  HttpServer.cpp  HttpServer.hpp  Https.hpp  IndexPage.cpp  IndexPage.hpp  InetSocketWrapper.cpp  InetSocketWrapper.h  LoginApi.cpp  LoginApi.hpp  LoginPage.cpp  LoginPage.hpp  Page.cpp  Page.hpp  StringHelper.hpp  TimedEvent.cpp  TimedEvent.hpp  UploadApi.cpp  UploadApi.hpp  UploadPage.cpp  WFileTransfer.hpp  server.vcxproj  server.vcxproj.filters
